src/Base/main/default/objects/QuoteLineItem/fields/BoatBuilderItem__c.field-meta.xml
<CustomField>
    <fullName>BoatBuilderItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BoatBuilderItem</label>
    <type>Checkbox</type>
</CustomField>