src/Base/main/default/objects/QuoteLineItem/fields/InsuranceCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCoverage__c</fullName>
    <label>InsuranceCoverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>