src/Base/main/default/objects/QuoteLineItem/fields/IsDiscount__c.field-meta.xml
<CustomField>
    <fullName>IsDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discount</label>
    <type>Checkbox</type>
</CustomField>