src/Base/main/default/objects/QuoteLineItem/fields/IsInsurance__c.field-meta.xml
<CustomField>
    <fullName>IsInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsurance</label>
    <type>Checkbox</type>
</CustomField>