src/Base/main/default/objects/QuoteLineItem/fields/IsPrepaid__c.field-meta.xml
<CustomField>
    <fullName>IsPrepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prepaid</label>
    <type>Checkbox</type>
</CustomField>