src/Base/main/default/objects/QuoteLineItem/fields/Taxable_Retail__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Retail</label>
    <type>Checkbox</type>
</CustomField>